优化了拖拽样式

--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>app</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+    <style>
+        @font-face {
+            font-family: 'iconfont';  /* project id 384848 */
+            src: url('//at.alicdn.com/t/font_384848_eqsba2xkdx5.eot');
+            src: url('//at.alicdn.com/t/font_384848_eqsba2xkdx5.eot?#iefix') format('embedded-opentype'),
+            url('//at.alicdn.com/t/font_384848_eqsba2xkdx5.woff') format('woff'),
+            url('//at.alicdn.com/t/font_384848_eqsba2xkdx5.ttf') format('truetype'),
+            url('//at.alicdn.com/t/font_384848_eqsba2xkdx5.svg#iconfont') format('svg');
+        }
+    </style>
+</head>
+<body>
+<div id="app"></div>
+<!-- built files will be auto injected -->
+</body>
 </html>
