--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             url('//at.alicdn.com/t/font_384848_6emi4bpf2nm.svg#iconfont') format('svg');
         }
     </style>
+    <!--<script src="https://apis.google.com/js/api.js"></script>-->
 </head>
 <body>
 <div id="app"></div>
-<!-- built files will be auto injected -->
 </body>
 </html>
