--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <style>
         @font-face {
             font-family: 'iconfont';  /* project id 384848 */
-            src: url('//at.alicdn.com/t/font_384848_6emi4bpf2nm.eot');
-            src: url('//at.alicdn.com/t/font_384848_6emi4bpf2nm.eot?#iefix') format('embedded-opentype'),
-            url('//at.alicdn.com/t/font_384848_6emi4bpf2nm.woff') format('woff'),
-            url('//at.alicdn.com/t/font_384848_6emi4bpf2nm.ttf') format('truetype'),
-            url('//at.alicdn.com/t/font_384848_6emi4bpf2nm.svg#iconfont') format('svg');
+            src: url('//at.alicdn.com/t/font_384848_uyap52ifmy.eot');
+            src: url('//at.alicdn.com/t/font_384848_uyap52ifmy.eot?#iefix') format('embedded-opentype'),
+            url('//at.alicdn.com/t/font_384848_uyap52ifmy.woff2') format('woff2'),
+            url('//at.alicdn.com/t/font_384848_uyap52ifmy.woff') format('woff'),
+            url('//at.alicdn.com/t/font_384848_uyap52ifmy.ttf') format('truetype'),
+            url('//at.alicdn.com/t/font_384848_uyap52ifmy.svg#iconfont') format('svg');
         }
     </style>
 </head>
